--- a/www/index.html
+++ b/www/index.html
@@ -252,350 +252,6 @@
             var maghrib = "5:51 pm";
             var isha = "6:56 pm";
 
-            // callback_fajr = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, fajr).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 1,
-            //         title: "Waktunya sholat subuh",
-            //         text: waktu,
-            //         at: waktu,
-            //         sound: "file://fajr_128_44.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     }, callback_fajr);
-            // };
-            //
-            // callback_fajr();
-            //
-            // callback_dhuhr = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, dhuhr).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 2,
-            //         title: "Waktunya sholat dhuhur",
-            //         text: waktu,
-            //         at: waktu,
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     }, callback_dhuhr);
-            // };
-            //
-            // callback_dhuhr();
-            //
-            // callback_asr = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, asr).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 3,
-            //         title: "Waktunya sholat dhuhur",
-            //         text: waktu,
-            //         at: waktu,
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     }, callback_asr);
-            // };
-            //
-            // callback_asr();
-            //
-            // callback_maghrib = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, maghrib).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 4,
-            //         title: "Waktunya sholat dhuhur",
-            //         text: waktu,
-            //         at: waktu,
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     }, callback_maghrib);
-            // };
-            //
-            // callback_maghrib();
-            //
-            // callback_isha = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, isha).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 5,
-            //         title: "Waktunya sholat dhuhur",
-            //         text: waktu,
-            //         at: waktu,
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     }, callback_isha);
-            // };
-            //
-            // callback_isha();
-
-            // $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
-            // {
-            //     //fajr = setDateTime(fajr, times.items[0].fajr);
-            //     console.log(times);
-            //     //console.log(fajr);
-            //
-            // });
-
-            // callback_fajr = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, fajr).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 1,
-            //         title: "Waktunya sholat subuh",
-            //         text: waktu,
-            //         firstAt: waktu,
-            //         every: "day",
-            //         sound: "file://fajr_128_44.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_fajr();
-            //
-            // callback_dhuhr = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, dhuhr).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 2,
-            //         title: "Waktunya sholat dhuhur",
-            //         text: waktu,
-            //         firstAt: waktu,
-            //         every: "day",
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_dhuhr();
-            //
-            // callback_asr = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, asr).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 3,
-            //         title: "Waktunya sholat asr",
-            //         text: waktu,
-            //         firstAt: waktu,
-            //         every: "day",
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_asr();
-            //
-            // callback_maghrib = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, maghrib).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 4,
-            //         title: "Waktunya sholat maghrib",
-            //         text: waktu,
-            //         firstAt: waktu,
-            //         every: "day",
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_maghrib();
-            //
-            // callback_isha = function ()
-            // {
-            //     var now = new Date().getTime();
-            //     var m = new Date();
-            //     var m = setDateTime(m, isha).getTime();
-            //     var timeDiff = Math.abs(m - now);
-            //     var waktu = new Date(now + timeDiff);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 5,
-            //         title: "Waktunya sholat isha",
-            //         text: waktu,
-            //         firstAt: waktu,
-            //         every: "day",
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_isha();
-
-
-            // callback_coba2 = function ()
-            // {
-            //     var now = new Date();
-            //     var m = new Date();
-            //     var m = setDateTime(m, "4:40 am");
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 2,
-            //         title: "Waktunya sholat coba2",
-            //         text: waktu,
-            //         at: m,
-            //         every: "day",
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_coba2();
-            //
-            // callback_coba = function ()
-            // {
-            //     var now             = new Date().getTime(),
-            //         _5_sec_from_now = new Date(now + 5*1000);
-            //
-            //     cordova.plugins.notification.local.schedule({
-            //         id: 1,
-            //         title: "Waktunya sholat coba",
-            //         text: waktu,
-            //         at: _5_sec_from_now,
-            //         every: "day",
-            //         sound: "file://mecca_56_22.mp3",
-            //         icon: "file://icon.png",
-            //         data: { meetingId:"123#fg8" }
-            //     });
-            // };
-            //
-            // callback_coba();
-
-            // var now = new Date().getTime();
-            // var m = new Date();
-            // var m = setDateTime(m, fajr).getTime();
-            //
-            // cordova.plugins.notification.local.schedule({
-            //     id:1,
-            //     text: "Saatnya sholat subuh " + m,
-            //     at: m,
-            //     every: "day",
-            //     led: "FF0000",
-            //     sound: null
-            // });
-            //
-            // var now = new Date().getTime();
-            // var m = new Date();
-            // var m = setDateTime(m, dhuhr).getTime();
-            //
-            // cordova.plugins.notification.local.schedule({
-            //     id:1,
-            //     text: "Saatnya sholat dhuhur " + m,
-            //     at: m,
-            //     every: "day",
-            //     led: "FF0000",
-            //     sound: null
-            // });
-            //
-            // var now = new Date().getTime();
-            // var m = new Date();
-            // var m = setDateTime(m, asr).getTime();
-            //
-            // cordova.plugins.notification.local.schedule({
-            //     id:1,
-            //     text: "Saatnya sholat ashar " + m,
-            //     at: m,
-            //     every: "day",
-            //     led: "FF0000",
-            //     sound: null
-            // });
-            //
-            // var now = new Date().getTime();
-            // var m = new Date();
-            // var m = setDateTime(m, maghrib).getTime();
-            //
-            // cordova.plugins.notification.local.schedule({
-            //     id:1,
-            //     text: "Saatnya sholat magrib " + m,
-            //     at: m,
-            //     every: "day",
-            //     led: "FF0000",
-            //     sound: null
-            // });
-            //
-            // var now = new Date().getTime();
-            // var m = new Date();
-            // var m = setDateTime(m, isha).getTime();
-            //
-            // cordova.plugins.notification.local.schedule({
-            //     id:1,
-            //     text: "Saatnya sholat isha " + m,
-            //     at: m,
-            //     every: "day",
-            //     led: "FF0000",
-            //     sound: null
-            // });
-
-            // cordova.plugins.notification.local.on("click", function (notification) {
-            //     joinMeeting(notification.data.meetingId);
-            // });
-
-            // var now             = new Date().getTime(),
-            //     _10_sec_from_now = new Date(now + 10*1000);
-            //
-            // cordova.plugins.notification.local.schedule({
-            //     id:1,
-            //     text: "10 Detik dari sekarang " + Date(),
-            //     at: _10_sec_from_now,
-            //     every: "minute",
-            //     led: "FF0000",
-            //     sound: null
-            // });
-
             var coba_waktu = "3:40 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
@@ -603,8 +259,9 @@
             cordova.plugins.notification.local.schedule({
                 id:1,
                 text: "Saatnya sholat isya 1 " + waktu_isha,
-                at: waktu_isha,
+                firstAt: waktu_isha,
                 led: "FF0000",
+                icon: "file://icon.png",
                 sound: "file://mecca_56_22.mp3"
             });
 
@@ -617,6 +274,7 @@
                 text: "Saatnya sholat isya 2 " + waktu_isha,
                 at: waktu_isha,
                 led: "FF0000",
+                icon: "file://icon.png",
                 sound: null
             });
 
