--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -416,6 +416,25 @@
         {
             console.log("Device Ready");
 
+            function setDateTime(date, time) {
+                var index = time.indexOf(":"); // replace with ":" for differently displayed time.
+                var index2 = time.indexOf(" ");
+
+                var hours = time.substring(0, index);
+                var minutes = time.substring(index + 1, index2);
+
+                var mer = time.substring(index2 + 1, time.length);
+                if (mer == "pm"){
+                    hours = parseInt(hours) + 12;
+                }
+
+                date.setHours(hours);
+                date.setMinutes(minutes);
+                date.setSeconds("00");
+
+                return date;
+            }
+
             var coba_waktu = "3:42 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
