--- a/www/index.html
+++ b/www/index.html
@@ -252,31 +252,44 @@
             var maghrib = "5:51 pm";
             var isha = "6:56 pm";
 
-            var coba_waktu = "3:40 am";
-            var waktu_isha = new Date();
-            var waktu_isha = setDateTime(waktu_isha, coba_waktu);
+            cordova.plugins.notification.local.isPresent(1, function (present) {
+                if(!present)
+                {
+                    var coba_waktu = "3:40 am";
+                    var waktu_isha = new Date();
+                    var waktu_isha = setDateTime(waktu_isha, coba_waktu);
 
-            cordova.plugins.notification.local.schedule({
-                id:1,
-                text: "Saatnya sholat isya 1 " + waktu_isha,
-                firstAt: waktu_isha,
-                led: "FF0000",
-                icon: "file://icon.png",
-                sound: "file://mecca_56_22.mp3"
+                    cordova.plugins.notification.local.schedule({
+                        id:1,
+                        text: "Saatnya sholat isya 1 " + waktu_isha,
+                        firstAt: waktu_isha,
+                        led: "FF0000",
+                        icon: "file://icon.png",
+                        sound: "file://mecca_56_22.mp3"
+                    });
+                }
+                else
+                {
+                    cordova.plugins.notification.local.get(1, function (notifications) {
+                        alert(notification.text);
+                    });
+                }
             });
 
-            var coba_waktu = "3:41 am";
-            var waktu_isha = new Date();
-            var waktu_isha = setDateTime(waktu_isha, coba_waktu);
-
-            cordova.plugins.notification.local.schedule({
-                id:2,
-                text: "Saatnya sholat isya 2 " + waktu_isha,
-                at: waktu_isha,
-                led: "FF0000",
-                icon: "file://icon.png",
-                sound: null
-            });
+            //
+            //
+            // var coba_waktu = "3:41 am";
+            // var waktu_isha = new Date();
+            // var waktu_isha = setDateTime(waktu_isha, coba_waktu);
+            //
+            // cordova.plugins.notification.local.schedule({
+            //     id:2,
+            //     text: "Saatnya sholat isya 2 " + waktu_isha,
+            //     at: waktu_isha,
+            //     led: "FF0000",
+            //     icon: "file://icon.png",
+            //     sound: null
+            // });
 
 
             cordova.plugins.notification.local.on("update", function(notification) {
