--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -414,36 +414,36 @@
         document.addEventListener("deviceready",onDeviceReady,false);
         function onDeviceReady()
         {
-            console.log("Device Ready");
-
-            function setDateTime(date, time) {
-                var index = time.indexOf(":"); // replace with ":" for differently displayed time.
-                var index2 = time.indexOf(" ");
-
-                var hours = time.substring(0, index);
-                var minutes = time.substring(index + 1, index2);
-
-                var mer = time.substring(index2 + 1, time.length);
-                if (mer == "pm"){
-                    hours = parseInt(hours) + 12;
-                }
-
-                date.setHours(hours);
-                date.setMinutes(minutes);
-                date.setSeconds("00");
-
-                return date;
-            }
-
-            var coba_waktu = "3:42 am";
-            var waktu_isha = new Date();
-            var waktu_isha = setDateTime(waktu_isha, coba_waktu);
-            cordova.plugins.notification.local.update({
-                id:1,
-                text: "Saatnya sholat isya update 1 " + waktu_isha,
-                led: "FF0000",
-                sound: null
-            });
+            // console.log("Device Ready");
+            //
+            // function setDateTime(date, time) {
+            //     var index = time.indexOf(":"); // replace with ":" for differently displayed time.
+            //     var index2 = time.indexOf(" ");
+            //
+            //     var hours = time.substring(0, index);
+            //     var minutes = time.substring(index + 1, index2);
+            //
+            //     var mer = time.substring(index2 + 1, time.length);
+            //     if (mer == "pm"){
+            //         hours = parseInt(hours) + 12;
+            //     }
+            //
+            //     date.setHours(hours);
+            //     date.setMinutes(minutes);
+            //     date.setSeconds("00");
+            //
+            //     return date;
+            // }
+            //
+            // var coba_waktu = "3:42 am";
+            // var waktu_isha = new Date();
+            // var waktu_isha = setDateTime(waktu_isha, coba_waktu);
+            // cordova.plugins.notification.local.update({
+            //     id:1,
+            //     text: "Saatnya sholat isya update 1 " + waktu_isha,
+            //     led: "FF0000",
+            //     sound: null
+            // });
         }
     </script>
     <!-- initialize -->
