present alert & ilangin index.js jadwal sholat

--- a/www/index.html
+++ b/www/index.html
@@ -270,9 +270,7 @@
                 }
                 else
                 {
-                    cordova.plugins.notification.local.get(1, function (notifications) {
-                        alert(notification.text);
-                    });
+                    alert('present');
                 }
             });
 
