--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -408,7 +408,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script src="js/material.min.js"></script>
     <script src="js/jquery.min.js"></script>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
     <script src="js/moment.js"></script>
     <script type="text/javascript">
         document.addEventListener("deviceready",onDeviceReady,false);
