ilangin app initialize

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -447,9 +447,9 @@
         }
     </script>
     <!-- initialize -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         app.initialize();
-    </script>
+    </script> -->
     <script type="text/javascript">
       jQuery(function($) {
           $("#sholat_table").hide();
