--- a/www/index.html
+++ b/www/index.html
@@ -259,14 +259,20 @@
                     var waktu_isha = new Date();
                     var waktu_isha = setDateTime(waktu_isha, coba_waktu);
 
-                    cordova.plugins.notification.local.schedule({
-                        id:1,
-                        text: "Saatnya sholat isya 1 " + waktu_isha,
-                        firstAt: waktu_isha,
-                        led: "FF0000",
-                        icon: "file://icon.png",
-                        sound: "file://mecca_56_22.mp3"
-                    });
+                    var now = new Date();
+
+                    // jika waktu lebih dari sekarang baru di schedule
+                    if(waktu_isha.getTime() > now.getTime())
+                    {
+                        cordova.plugins.notification.local.schedule({
+                            id:1,
+                            text: "Saatnya sholat isya 1 " + waktu_isha,
+                            firstAt: waktu_isha,
+                            led: "FF0000",
+                            icon: "file://icon.png",
+                            sound: "file://mecca_56_22.mp3"
+                        });
+                    }
                 }
                 else
                 {
