ilangin semua yg berhubungan dengan cordova

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -410,7 +410,7 @@
     <script src="js/jquery.min.js"></script>
     <!-- <script src="js/index.js"></script> -->
     <script src="js/moment.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         document.addEventListener("deviceready",onDeviceReady,false);
         function onDeviceReady()
         {
@@ -445,7 +445,7 @@
             //     sound: null
             // });
         }
-    </script>
+    </script> -->
     <!-- initialize -->
     <!-- <script type="text/javascript">
         app.initialize();
