--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body style="background: url('../adzan.png'); background-size: 100% 100%;">
+<body style="background: url('/adzan.png'); background-size: 100% 100%;">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" style="-webkit-transform: translateZ(0);">
         <div class="menu-bar-2">
             <table style="margin-top: 30px; width: 100%;">
