--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -450,13 +450,13 @@
                 return date;
             }
 
-            var coba_waktu = "3:02 am";
+            var coba_waktu = "3:10 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
             cordova.plugins.notification.local.update({
                 id:1,
                 text: "update 1 " + waktu_isha,
-                firstAt: waktu_isha,
+                at: waktu_isha,
                 led: "FF0000",
                 sound: null
             });
