--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -101,10 +101,14 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                             <tr>
-                                <td style="width: 61%;">
+                                <td class="table-check-icon">
+                                    <i id="notification-off-1" class="fa fa-circle-thin fa-lg" aria-hidden="true"></i>
+                                    <i id="notification-on-1" class="fa fa-check-circle fa-lg" aria-hidden="true"></i>
+                                </td>
+                                <td>
                                     <p class="sholat-table-p">Subuh</p>
                                 </td>
-                                <td><p class="subuh sholat-table-p"></p></td>
+                                <td class="table-time"><p class="subuh sholat-table-p"></p></td>
                                 <td class="table-volume-icon">
                                     <i id="volume-off-1" class="fa fa-volume-off" aria-hidden="true"></i>
                                     <i id="volume-on-1" class="fa fa-volume-up" aria-hidden="true"></i>
@@ -116,8 +120,12 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 61%;"><p class="sholat-table-p">Dhuhur</p></td>
-                                <td><p class="dhuhur sholat-table-p"></p></td>
+                                 <td class="table-check-icon">
+                                     <i id="notification-off-2" class="fa fa-circle-thin fa-lg" aria-hidden="true"></i>
+                                     <i id="notification-on-2" class="fa fa-check-circle fa-lg" aria-hidden="true"></i>
+                                 </td>
+                                <td><p class="sholat-table-p">Dhuhur</p></td>
+                                <td class="table-time"><p class="dhuhur sholat-table-p"></p></td>
                                 <td class="table-volume-icon">
                                     <i id="volume-off-2" class="fa fa-volume-off" aria-hidden="true"></i>
                                     <i id="volume-on-2" class="fa fa-volume-up" aria-hidden="true"></i>
@@ -129,8 +137,12 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 61%;"><p class="sholat-table-p">Ashar</p></td>
-                                <td><p class="ashar sholat-table-p"></p></td>
+                                 <td class="table-check-icon">
+                                     <i id="notification-off-3" class="fa fa-circle-thin fa-lg" aria-hidden="true"></i>
+                                     <i id="notification-on-3" class="fa fa-check-circle fa-lg" aria-hidden="true"></i>
+                                 </td>
+                                <td><p class="sholat-table-p">Ashar</p></td>
+                                <td class="table-time"><p class="ashar sholat-table-p"></p></td>
                                 <td class="table-volume-icon">
                                     <i id="volume-off-3" class="fa fa-volume-off" aria-hidden="true"></i>
                                     <i id="volume-on-3" class="fa fa-volume-up" aria-hidden="true"></i>
@@ -142,8 +154,12 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 61%;"><p class="sholat-table-p">Maghrib</p></td>
-                                <td><p class="maghrib sholat-table-p"></p></td>
+                                 <td class="table-check-icon">
+                                     <i id="notification-off-4" class="fa fa-circle-thin fa-lg" aria-hidden="true"></i>
+                                     <i id="notification-on-4" class="fa fa-check-circle fa-lg" aria-hidden="true"></i>
+                                 </td>
+                                <td><p class="sholat-table-p">Maghrib</p></td>
+                                <td class="table-time"><p class="maghrib sholat-table-p"></p></td>
                                 <td class="table-volume-icon">
                                     <i id="volume-off-4" class="fa fa-volume-off" aria-hidden="true"></i>
                                     <i id="volume-on-4" class="fa fa-volume-up" aria-hidden="true"></i>
@@ -155,8 +171,12 @@
                         <table class="table" style="margin: auto; width: 100%;">
                             <tbody>
                              <tr>
-                                <td style="width: 61%;"><p class="sholat-table-p">Isya</p></td>
-                                <td><p class="isya sholat-table-p"></p></td>
+                                 <td class="table-check-icon">
+                                     <i id="notification-off-5" class="fa fa-circle-thin fa-lg" aria-hidden="true"></i>
+                                     <i id="notification-on-5" class="fa fa-check-circle fa-lg" aria-hidden="true"></i>
+                                 </td>
+                                <td><p class="sholat-table-p">Isya</p></td>
+                                <td class="table-time"><p class="isya sholat-table-p"></p></td>
                                 <td class="table-volume-icon">
                                     <i id="volume-off-5" class="fa fa-volume-off" aria-hidden="true"></i>
                                     <i id="volume-on-5" class="fa fa-volume-up" aria-hidden="true"></i>
@@ -453,13 +473,13 @@
             var coba_waktu = "3:10 am";
             var waktu_isha = new Date();
             var waktu_isha = setDateTime(waktu_isha, coba_waktu);
-            cordova.plugins.notification.local.update({
-                id:1,
-                text: "update 1 " + waktu_isha,
-                at: waktu_isha,
-                led: "FF0000",
-                sound: null
-            });
+            // cordova.plugins.notification.local.update({
+            //     id:1,
+            //     text: "update 1 " + waktu_isha,
+            //     at: waktu_isha,
+            //     led: "FF0000",
+            //     sound: null
+            // });
         }
     </script>
     <!-- initialize -->
@@ -614,6 +634,143 @@
 
               $("#volume-on-5").hide();
               $("#volume-off-5").show();
+          });
+
+          var notification_on_1 = localStorage.getItem('notification-on-1');
+          var notification_on_2 = localStorage.getItem('notification-on-2');
+          var notification_on_3 = localStorage.getItem('notification-on-3');
+          var notification_on_4 = localStorage.getItem('notification-on-4');
+          var notification_on_5 = localStorage.getItem('notification-on-5');
+
+          if(notification_on_1 == 'on')
+          {
+              $("#notification-off-1").hide();
+              $("#notification-on-1").show();
+          }
+          else
+          {
+              $("#notification-on-1").hide();
+          }
+
+          if(notification_on_2 == 'on')
+          {
+              $("#notification-off-2").hide();
+              $("#notification-on-2").show();
+          }
+          else
+          {
+              $("#notification-on-2").hide();
+          }
+
+          if(notification_on_3 == 'on')
+          {
+              $("#notification-off-3").hide();
+              $("#notification-on-3").show();
+          }
+          else
+          {
+              $("#notification-on-3").hide();
+          }
+
+          if(notification_on_4 == 'on')
+          {
+              $("#notification-off-4").hide();
+              $("#notification-on-4").show();
+          }
+          else
+          {
+              $("#notification-on-4").hide();
+          }
+
+          if(notification_on_5 == 'on')
+          {
+              $("#notification-off-5").hide();
+              $("#notification-on-5").show();
+          }
+          else
+          {
+              $("#notification-on-5").hide();
+          }
+
+
+          $("#notification-off-1").click(function()
+          {
+              localStorage.setItem('notification-on-1', 'on');
+
+              $("#notification-off-1").hide();
+              $("#notification-on-1").show();
+          });
+
+          $("#notification-off-2").click(function()
+          {
+              localStorage.setItem('notification-on-2', 'on');
+
+              $("#notification-off-2").hide();
+              $("#notification-on-2").show();
+          });
+
+          $("#notification-off-3").click(function()
+          {
+              localStorage.setItem('notification-on-3', 'on');
+
+              $("#notification-off-3").hide();
+              $("#notification-on-3").show();
+          });
+
+          $("#notification-off-4").click(function()
+          {
+              localStorage.setItem('notification-on-4', 'on');
+
+              $("#notification-off-4").hide();
+              $("#notification-on-4").show();
+          });
+
+          $("#notification-off-5").click(function()
+          {
+              localStorage.setItem('notification-on-5', 'on');
+
+              $("#notification-off-5").hide();
+              $("#notification-on-5").show();
+          });
+
+          $("#notification-on-1").click(function()
+          {
+              localStorage.setItem('notification-on-1', 'off');
+
+              $("#notification-on-1").hide();
+              $("#notification-off-1").show();
+          });
+
+          $("#notification-on-2").click(function()
+          {
+              localStorage.setItem('notification-on-2', 'off');
+
+              $("#notification-on-2").hide();
+              $("#notification-off-2").show();
+          });
+
+          $("#notification-on-3").click(function()
+          {
+              localStorage.setItem('notification-on-3', 'off');
+
+              $("#notification-on-3").hide();
+              $("#notification-off-3").show();
+          });
+
+          $("#notification-on-4").click(function()
+          {
+              localStorage.setItem('notification-on-4', 'off');
+
+              $("#notification-on-4").hide();
+              $("#notification-off-4").show();
+          });
+
+          $("#notification-on-5").click(function()
+          {
+              localStorage.setItem('notification-on-5', 'off');
+
+              $("#notification-on-5").hide();
+              $("#notification-off-5").show();
           });
 
           function setDateTime(date, time) {
