--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -480,6 +480,9 @@
             //     led: "FF0000",
             //     sound: null
             // });
+            cordova.plugins.notification.local.on("update", function(notification) {
+                alert("updated: " + notification.id);
+            });
         }
     </script>
     <!-- initialize -->
@@ -636,6 +639,27 @@
               $("#volume-off-5").show();
           });
 
+          function addNotification(date)
+          {
+              cordova.plugins.notification.local.schedule({
+                  id:1,
+                  text: "Cobain tambah " + date,
+                  firstAt: date,
+                  led: "FF0000",
+                  icon: "file://icon.png",
+                  sound: null
+            });
+          };
+
+          function addNotificationSubuh()
+          {
+              alert(testWaktu);
+              var waktu = new Date();
+              var waktu = setDateTime(waktu, testWaktu);
+
+              addNotification(waktu);
+          };
+
           var notification_on_1 = localStorage.getItem('notification-on-1');
           var notification_on_2 = localStorage.getItem('notification-on-2');
           var notification_on_3 = localStorage.getItem('notification-on-3');
@@ -699,6 +723,8 @@
 
               $("#notification-off-1").hide();
               $("#notification-on-1").show();
+
+              addNotificationSubuh();
           });
 
           $("#notification-off-2").click(function()
@@ -772,6 +798,8 @@
               $("#notification-on-5").hide();
               $("#notification-off-5").show();
           });
+
+          var testWaktu = "12:15 am";
 
           function setDateTime(date, time) {
               var index = time.indexOf(":"); // replace with ":" for differently displayed time.
