update coba besok

--- a/www/jadwal-sholat.html
+++ b/www/jadwal-sholat.html
@@ -852,6 +852,27 @@
 
               return date;
           }
+
+          function setDateTimeTommorow(date, time) {
+              var index = time.indexOf(":"); // replace with ":" for differently displayed time.
+              var index2 = time.indexOf(" ");
+
+              var hours = time.substring(0, index);
+              var minutes = time.substring(index + 1, index2);
+
+              var mer = time.substring(index2 + 1, time.length);
+              if (mer == "pm"){
+                  hours = parseInt(hours) + 12;
+              }
+
+              date.setDate(date.getDate() + 1);
+
+              date.setHours(hours);
+              date.setMinutes(minutes);
+              date.setSeconds("00");
+
+              return date;
+          }
         //console.log('masuk');
          $.getJSON('http://muslimsalat.com/daily.json?key=54b4773caae224e8d38cebd5a737ec37&jsoncallback=?', function (times)
          {
